--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <script src="./scripts/left_pane.js"></script>
 
 <style>
-  button[remove] > img{
-    content:url("./close.png")   
+  button[remove].left-pane-btn > img{
+    content:url("./check_mark.png")   
   }
-
-  button > img{
+  
+  .left-pane-btn > img{
     content:url("./add.png")   
   }
 
